Infrastructure/istio/templates/gateways/infra-deployment-neg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: new-caring-dev
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: ingressgateway
  template:
    metadata:
      labels:
        app: istio-ingressgateway
        istio: ingressgateway
    spec:
      containers:
        - name: istio-proxy
          image: istio/proxyv2:1.20.3
          ports:
            - containerPort: 8080
              name: http2
            - containerPort: 15021
              name: status-port
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 15021
            initialDelaySeconds: 1
            periodSeconds: 2
