Infrastructure/istio/templates/gateways/infra-gateway-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    istio: ingressgateway
  type: ClusterIP
