Infrastructure/istio/templates/gateways/infra-gateway-service-internal-status.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-status
  namespace: istio-system
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
    - name: status-port
      protocol: TCP
      port: 15021
      targetPort: 15021
