Infrastructure/istio/templates/gateways/infra-gateway-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  ports:
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: status-port
      protocol: TCP
      port: 15021
      targetPort: 15021
