Infrastructure/istio/templates/gateways/infra-service-neg.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: new-caring-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "new-caring-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 8080
    - name: status-port
      port: 15021
      targetPort: 15021
