Infrastructure/istio/templates/gateways/infra-gateway-internal.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: infra-gateway-internal
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "upgrade-dev-02.caringcm.com.tw"
      port:
        name: http
        number: 80
        protocol: HTTP
