Infrastructure/istio/templates/gateways/infra-gateway-neg.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: infra-gateway-neg
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{},"15021":{}}}'
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - "*"
      port:
        name: status-port
        number: 15021
        protocol: HTTP
