Infrastructure/istio/templates/gateways/infra-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: infra-gateway
spec:
  selector:
    istio: istio
  servers:
    - hosts:
        - "*.jubo.health"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: jubo-health-certificate
        mode: SIMPLE
    - hosts:
        - "*.jubo.health"
      port:
        name: http
        number: 80
        protocol: HTTP
