Infrastructure/istio/templates/gateways/infra-ingress-web-page.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-caring-ingress
  namespace: new-caring-web-page-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: "*.caringcm.com.tw"
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: new-caring-web-page
                namespace: new-caring-web-page-dev
                port:
                  number: 80
