Infrastructure/istio/templates/gateways/infra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-caring-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: "*.caringcm.com.tw"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: new-caring-web-api
                namespace: new-caring-web-api-dev
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: new-caring-web-page
                namespace: new-caring-web-page-dev
                port:
                  number: 80
